fix images clipping at slightly under 768px

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import "normalize";
+@import "mixins";
 
 // Variables
 $libre-orange: #f48526;
@@ -130,7 +131,7 @@ div.content {
 
 @media (min-width: 768px) {
     .gallery {
-        width:750px;
+	@include calc("width", "768px - 4rem")
     }
 }
 
